# pr-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/pr_analyzer/: __init__.py  analyzer.py  cli.py  fetcher.py  visualizer.py
