[project]
name = "pr-analyzer"
version = "0.1.0"
description = "Analyze GitHub PR statistics and productivity metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "click>=8.1.0",
    "scipy>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[project.scripts]
pr-analyze = "pr_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_analyzer"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize Python syntax)
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt (f-string conversion)
    "PERF",   # perflint (performance)
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # assert usage (common in data analysis)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0915", # too many statements (acceptable for visualization functions)
    "T201",    # print found (we use print for CLI output)
    "S603",    # subprocess without shell=True check
    "S607",    # partial executable path
    "TRY003",  # long messages outside exception class
    "EM101",   # raw string in exception
    "EM102",   # f-string in exception
    "BLE001",  # blind exception catch (acceptable for CLI top-level)
    "COM812",  # trailing comma (conflicts with formatter)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["pr_analyzer"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
